week 12 session 2 follow up

--- a/Kata/Kata/Kata.csproj
+++ b/Kata/Kata/Kata.csproj
@@ -33,6 +33,9 @@
     <None Update="sampleObject.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="she-loves-you.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
