Add Kata/Demos/JsonDemo to read/write a json db

--- a/Kata/Kata/Kata.csproj
+++ b/Kata/Kata/Kata.csproj
@@ -48,6 +48,9 @@
     <None Update="she-loves-you.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="soshe.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
