--- a/Kata/Demos/Demos.csproj
+++ b/Kata/Demos/Demos.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Demo\BlackJackDemo.cs" />
-    <Compile Remove="Demo\GamependiumDemo.cs" />
+    <Compile Remove="Complete\BlackJackDemo.cs" />
+    <Compile Remove="Complete\GamependiumDemo.cs" />
     <Compile Remove="Exercise11DemoDone.cs" />
     <Compile Remove="TrackListFactoryDemo.cs" />
   </ItemGroup>
