Bartender 13/1/22 - Key sequence menu

--- a/Kata/BusinessObjectLayer/BusinessObjectLayer.csproj
+++ b/Kata/BusinessObjectLayer/BusinessObjectLayer.csproj
@@ -17,6 +17,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Standalone\Bartender\BarMenuItem.cs" />
+    <Compile Remove="Standalone\Bartender\DrinkMenuSelectionItem.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Standalone\FestivalFactory\211103-Answers\" />
   </ItemGroup>
 
