Soshal - a sample signup/login process

--- a/Kata/BusinessObjectLayer/BusinessObjectLayer.csproj
+++ b/Kata/BusinessObjectLayer/BusinessObjectLayer.csproj
@@ -35,4 +35,10 @@
     <ProjectReference Include="..\Helpers\Helpers.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Standalone\Soshal\soshe.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
